--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,7 +7,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet"/>
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/colors/blue-dark.css" rel="stylesheet">
+    <!--<link href="css/colors/blue-dark.css" rel="stylesheet">-->
+    <link href="css/colors/default.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
   </head>
 
